# vpn-detector

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/: main.py
src/api/: router.py
src/core/: detector.py
src/static/: index.html
